test/types/atomic/sungeun/no_atomic_assign.good
no_atomic_assign.chpl:3: error: Cannot directly assign atomic variables
